@@ -58,7 +58,8 @@ function wggalleryCommentsApprove($comment)
     $tags['IMAGE_URL']   = XOOPS_URL . '/modules/' . $GLOBALS['xoopsModule']->getVar('dirname') . '/images.php?op=show&img_id=' . $imgId . '&amp;alb_id=' . $albId;
     $tags['ALBUM_URL']   = XOOPS_URL . '/modules/' . $GLOBALS['xoopsModule']->getVar('dirname') . '/albums.php?op=show&alb_id=' . $albId;
     $notificationHandler = xoops_getHandler('notification');
-    $notificationHandler->triggerEvent('global', 0, 'img_comment_all', $tags, [], $comment->getVar('com_modid'));
-    $notificationHandler->triggerEvent('albums', $albId, 'img_comment', $tags);
+    $notificationHandler->triggerEvent('global', 0, 'image_comment_all', $tags, [], $comment->getVar('com_modid'));
+    $notificationHandler->triggerEvent('albums', $albId, 'image_comment_alb', $tags);
+    $notificationHandler->triggerEvent('images', $imgId, 'image_comment', $tags);
 
 }
